# backend/app/Http/Resources/App/ImageTag/ImageTagResource.php
@@ -1,31 +1,26 @@
 <?php
 
-namespace App\Http\Resources\Auth;
+namespace App\Http\Resources\App\ImageTag;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 use OpenApi\Attributes as OA;
 
 #[OA\Schema(
-    schema: 'AppCheckAuthUserResource.php',
+    schema: 'AppImageTagResource',
     properties: [
         new OA\Property(property: 'id', type: 'number', example: '1'),
-        new OA\Property(property: 'email', type: 'string', example: 'email'),
+        new OA\Property(property: 'title', type: 'string', example: 'Название тега'),
     ],
     type: 'object'
 )]
-class CheckAuthUserResource extends JsonResource
+class ImageTagResource extends JsonResource
 {
-    /**
-     * Transform the resource into an array.
-     *
-     * @return array<string, mixed>
-     */
     public function toArray(Request $request): array
     {
         return [
             'id' => $this->id,
-            'email' => $this->email,
+            'title' => $this->title,
         ];
     }
 }
